<resources>
    <string name="app_name">The Winnovators</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="welcome">Welcome</string>
    <string name="wall_posts">Wall Posts</string>
    <string name="voting_system">Voting System</string>
    <string name="chat">Chat</string>
    <string name="gm_message">GM Message</string>
    <string name="profile">Profile</string>
    <string name="description">description</string>
    <string name="agenda">Agenda</string>
    <string name="share">share</string>
    <string name="select_day">Select Day</string>
    <string name="notifications">Notifications</string>
    <string name="voting_details">Voting Details</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="write_comment">Write Comment</string>
    <string name="write_your_post_here">Write your post here</string>
    <string name="employer_code">Employer Code</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="your_email">Your Email</string>
    <string name="say_something">Say something..</string>
</resources>