<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_close"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/dark_text"
            android:textSize="20sp"
            android:textStyle="bold" />



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/dark_text"
                android:textColorHint="@color/dark_text"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/current_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/current_password"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/dark_text"
                    android:textColorHint="@color/dark_text"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_text"
            android:textColorHint="@color/dark_text"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/new_password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/dark_text"
                android:textColorHint="@color/dark_text"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_gradient"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
