<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="20dp"
    tools:context="com.novartis.winnovators.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/dark_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_notification" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:paddingVertical="40dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">


                    <TextView
                        android:id="@+id/posts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="30dp"
                        android:paddingVertical="40dp"
                        android:text="@string/wall_posts"
                        android:textColor="@color/dark_text"
                        android:textSize="18sp"
                        app:drawableTopCompat="@drawable/ic_posts" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">


                    <TextView
                        android:id="@+id/agenda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="30dp"
                        android:paddingVertical="40dp"
                        android:text="@string/agenda"
                        android:textColor="@color/dark_text"
                        android:textSize="18sp"
                        app:drawableTopCompat="@drawable/ic_agenda" />


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">


                    <TextView
                        android:id="@+id/voting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="30dp"
                        android:paddingVertical="40dp"
                        android:text="@string/voting_system"
                        android:textColor="@color/dark_text"
                        android:textSize="18sp"
                        app:drawableTopCompat="@drawable/ic_voting" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">


                    <TextView
                        android:id="@+id/chat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="30dp"
                        android:paddingVertical="40dp"
                        android:text="@string/chat"
                        android:textColor="@color/dark_text"
                        android:textSize="18sp"
                        app:drawableTopCompat="@drawable/ic_chat" />


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:id="@+id/gm_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="30dp"
                        android:paddingVertical="40dp"
                        android:text="@string/gm_message"
                        android:textColor="@color/dark_text"
                        android:textSize="18sp"
                        app:drawableTopCompat="@drawable/ic_gm_message" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:id="@+id/profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="30dp"
                        android:paddingVertical="40dp"
                        android:text="@string/profile"
                        android:textColor="@color/dark_text"
                        android:textSize="18sp"
                        app:drawableTopCompat="@drawable/ic_profile" />

                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>