<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.novartis.winnovators.chat.messages.MessagesActivity">

    <LinearLayout
        android:layout_above="@+id/add_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/dark_text"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_back"
                app:drawableTint="@color/dark_text" />

        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/item_message_left" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


    <RelativeLayout
        android:id="@+id/add_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:focusableInTouchMode="true"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <EditText
            android:id="@+id/et_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/send_msg"
            android:background="@color/transparent"
            android:hint="@string/say_something"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text" />


        <ImageView
            android:id="@+id/send_msg"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/description"
            android:gravity="center"
            android:src="@drawable/ic_send_msg" />


    </RelativeLayout>
</RelativeLayout>