<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:padding="15dp"
    tools:context="com.novartis.winnovators.wall_posts.AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp">

            <TextView
                android:id="@+id/screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/dark_text"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_back"
                app:drawableTint="@color/dark_text" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="20dp"
                    android:background="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">

                    <EditText
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="@color/transparent"
                        android:gravity="top"
                        android:hint="@string/write_your_post_here"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:padding="20dp" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/add_image"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_add_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add Image"
                        android:textColor="@color/dark_text"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <ImageView
                    android:id="@+id/post_img"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_gradient"
                    android:padding="20dp"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>